--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
     <title>BlazorGitHubPages</title>
+    <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
     <app>Loading...</app>
 
-    <script src="css/bootstrap/bootstrap-native.min.js"></script>
-    <script src="_framework/blazor.js" main="BlazorGitHubPages.dll" entrypoint="BlazorGitHubPages.Program::Main" references="Microsoft.AspNetCore.Blazor.Browser.dll,Microsoft.AspNetCore.Blazor.dll,Microsoft.Extensions.DependencyInjection.Abstractions.dll,Microsoft.Extensions.DependencyInjection.dll,mscorlib.dll,netstandard.dll,System.Core.dll,System.Diagnostics.StackTrace.dll,System.dll,System.Globalization.Extensions.dll,System.Net.Http.dll,System.Runtime.Serialization.Primitives.dll,System.Security.Cryptography.Algorithms.dll" linker-enabled="true"></script></body>
+    <script src="_framework/blazor.webassembly.js"></script>
+</body>
 </html>
